[DONE] consider SALE dates & OVERNIGHT dates on pricelist items (#38)
* [FIX] pms: fix timezones (test,compute & create) @ massive changes

* [REF] pms: fiels date_start/end_overnight (pricelist_items)

* [IMP] pms: SQL to consider overnight dates and priorize items (_compute_price_rule_get_items)

* [REF] pms: add tests for overnight dates and unify test cases with subtests

* [FIX] pms: fix apply partially pricelist items on several reservation lines

* [FIX] pms: consider services to priorize pricelists

* [FIX] test pricelist priority without taxs

Co-authored-by: Darío Lodeiros <dario@commitsun.com>

--- a/pms/views/product_pricelist_item_views.xml
+++ b/pms/views/product_pricelist_item_views.xml
@@ -11,6 +11,10 @@
                     options="{'no_create': True,'no_open': True}"
                 />
             </xpath>
+            <xpath expr="//field[@name='date_end']" position="after">
+                <field name="date_start_overnight" />
+                <field name="date_end_overnight" />
+            </xpath>
         </field>
     </record>
 </odoo>
