--- a/pms/views/product_pricelist_views.xml
+++ b/pms/views/product_pricelist_views.xml
@@ -18,13 +18,16 @@
                 expr="//field[@name='item_ids']/tree/field[@name='base']"
                 position="after"
             >
+                <field name="date_start_overnight" />
+                <field name="date_end_overnight" />
                 <field
                     name="pms_property_ids"
                     widget="many2many_tags"
                     options="{'no_create': True,'no_open': True}"
                 />
-
             </xpath>
+
+
             <xpath expr="//widget[@name='web_ribbon']" position="after">
                 <div class="oe_button_box " name="button_box">
                     <button
