--- a/pms/views/pms_shared_room_views.xml
+++ b/pms/views/pms_shared_room_views.xml
@@ -127,7 +127,7 @@
         name="Shared Rooms"
         id="menu_open_pms_shared_room_form"
         action="action_pms_shared_room_form"
-        sequence="5"
-        parent="pms.menu_pms_room"
+        sequence="55"
+        parent="pms.pms_rooms_menu"
     />
 </odoo>
