--- a/pms/views/pms_cancelation_rule_views.xml
+++ b/pms/views/pms_cancelation_rule_views.xml
@@ -67,6 +67,6 @@
         id="menu_pms_cancelation_rule"
         action="action_pms_cancelation_rule"
         sequence="25"
-        parent="pms.configuration_others"
+        parent="pms.pms_configuration_menu"
     />
 </odoo>
