--- a/pms/views/pms_sale_channel.xml
+++ b/pms/views/pms_sale_channel.xml
@@ -9,6 +9,8 @@
                     <group>
                         <field name="name" colspan="1" />
                         <field name="channel_type" />
+                        <field name="on_line" />
+                        <field name="product_pricelist_ids" widget="many2many_tags" />
                     </group>
                 </sheet>
             </form>
@@ -21,6 +23,8 @@
             <tree string=" Sale Channel">
                 <field name="name" />
                 <field name="channel_type" />
+                <field name="on_line" />
+                <field name="product_pricelist_ids" widget="many2many_tags" />
             </tree>
         </field>
     </record>
