[FIX]pms: invoice state reservation store

--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -840,7 +840,7 @@
                 <searchpanel>
                     <field name="room_type_id" string="Room Type" enable_counters="1" />
                     <field name="pricelist_id" string="Pricelist" enable_counters="1" />
-                    <field
+                     <field
                         name="channel_type_id"
                         string="Channel"
                         enable_counters="1"
@@ -852,12 +852,12 @@
                         enable_counters="1"
                         select="multi"
                     />
-                    <field
+                    <!--<field
                         name="folio_payment_state"
                         string="Payment State"
                         enable_counters="1"
                         select="multi"
-                    />
+                    /> -->
                 </searchpanel>
             </search>
         </field>
